src/objects/Homepage_Template__c.object
<CustomObject>
    <fields>
        <fullName>Criteria_Filter_Logic__c</fullName>
        <label>Criteria Filter Logic</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Criteria__c</fullName>
        <label>Criteria</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Default__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Footer__c</fullName>
        <label>Footer</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Header__c</fullName>
        <label>Header</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <label>Homepage Template</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Homepage Layout Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Homepage Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>